# job-termminal

./: .env.example  .gitignore  Dockerfile  config.py  docker-compose.yml  groq_client.py  pyproject.toml  scheduler.py  seed_data.py  seed_jobs.py  workers.py
agents/: base_agent.py  career_agent.py  funding_agent.py  github_agent.py  social_agent.py
api/: main.py
database/: db.py  models.py  redis_client.py
events/: event_stream.py
frontend/: app.js  index.html  style.css
pipeline/: crawl_budget.py  internship_predictor.py  job_discovery.py  semantic_detector.py  signal_processor.py  vector_search.py
